# homework_2021_2_c_lang

./: .gitignore  CMakeLists.txt  README.md  gtest_one_thread.cpp  main_one_thread.c
.github/workflows/: ci.yml
project/: main_matrix_multi_thread.c  main_matrix_one_thread.c
project/include/: matrix_multi_thread.h  matrix_one_thread.h  matrix_processing.h  multi_thread_structures.h  structures.h
project/src/: matrix_multi_thread.c  matrix_one_thread.c
project/tests/: CMakeLists.txt  gtest_matrix_multi_thread.cpp  gtest_matrix_one_thread.cpp  gtest_stress_tests.cpp  time_test.c
project/tests/include/: lib_generator.h  lib_stress_test.h  lib_time_test.h  test_structures.h
project/tests/productivity/: CMakeLists.txt  gtest_stress_tests.cpp
project/tests/productivity/async/: CMakeLists.txt  async_stress_test.c  async_time_test.c
project/tests/productivity/sync/: CMakeLists.txt  sync_stress_test.c  sync_time_test.c
project/tests/service_module/: multi_thread_service_func.h  one_thread_service_func.h  time_test_func.h
project/tests/service_module/include/: lib_generator.h  lib_stress_test.h  lib_time_test.h  test_structures.h
project/tests/service_module/src/: lib_generator.c  lib_stress_test.c  lib_time_test.c  write_stress_tests.c
